--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "three-template-with-astro",
+  "name": "threejs-astro-demos",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
@@ -11,10 +12,10 @@
   },
   "dependencies": {
     "astro": "^2.6.2",
-    "three": "^0.153.0"
+    "three": "^0.157.0"
   },
   "devDependencies": {
-    "@types/three": "^0.152.1",
+    "@types/three": "^0.156.0",
     "autoprefixer": "^10.4.14",
     "prettier": "^2.8.4",
     "prettier-plugin-astro": "^0.8.0",
