--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.6.2",
+    "astro": "^2.10.15",
+    "gsap": "^3.12.2",
     "three": "^0.157.0"
   },
   "devDependencies": {
     "@types/three": "^0.156.0",
-    "autoprefixer": "^10.4.14",
-    "prettier": "^2.8.4",
-    "prettier-plugin-astro": "^0.8.0",
+    "autoprefixer": "^10.4.16",
+    "prettier": "^2.8.8",
+    "prettier-plugin-astro": "^0.8.1",
     "ress": "^5.0.2",
-    "sass": "^1.58.3",
+    "sass": "^1.69.0",
     "vite-plugin-glsl": "^1.1.2"
   }
 }
