Create a more organised demo templating mechanism

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,13 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@layouts/*": [ "src/layouts/*" ],
-      "@components/*": [ "src/components/*" ],
-      "@styles/*": [ "src/styles/*" ],
-      "@scripts/*": [ "src/scripts/*" ],
-      "@types/*": [ "src/types/*" ]
-    },
+      "@layouts/*": ["src/layouts/*"],
+      "@components/*": ["src/components/*"],
+      "@demos/*": ["src/demos/*"],
+      "@styles/*": ["src/styles/*"],
+      "@scripts/*": ["src/scripts/*"],
+      "@types/*": ["src/types/*"]
+    }
   },
   "extends": "astro/tsconfigs/base"
 }
