--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@types/fontfaceobserver": "^2.1.1",
+    "@types/imagesloaded": "^4.1.3",
     "astro": "^3.2.3",
+    "fontfaceobserver": "^2.3.0",
     "gsap": "^3.12.2",
+    "imagesloaded": "^5.0.0",
     "three": "^0.157.0"
   },
   "devDependencies": {
