--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.2.1",
     "@types/fontfaceobserver": "^2.1.1",
     "@types/imagesloaded": "^4.1.3",
     "astro": "^3.2.3",
     "fontfaceobserver": "^2.3.0",
     "gsap": "^3.12.2",
     "imagesloaded": "^5.0.0",
-    "three": "^0.157.0"
+    "three": "^0.157.0",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/node": "^20.8.7",
     "@types/three": "^0.156.0",
     "autoprefixer": "^10.4.16",
     "prettier": "^3.0.3",
